login finish registerfinish profil visible finish profile modified desc and profilpictur bug to fix

--- a/statics/css/profilUser/profilUser.css
+++ b/statics/css/profilUser/profilUser.css
@@ -94,6 +94,9 @@ input[type="text"],input[type="button"],#profilDesc{
     margin-bottom: 30px;
     box-shadow: #ffffff3b 0 0 15px;
 }
+#profilDesc{
+    resize: none;
+}
 #save{
     width: auto;
     padding: 20px 50px;
